fix: fix card spacing

--- a/product.css
+++ b/product.css
@@ -102,7 +102,7 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   border: 0.5rem solid #fcd0cf;
 }
 
